namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-crown-sitting-days-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-crown-sitting-days-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMCTS"
    cloud-platform.justice.gov.uk/slack-channel: "data-platform-application-migration-support"
    cloud-platform.justice.gov.uk/application: "Data Discovery Tool"
    cloud-platform.justice.gov.uk/owner: "hmcts a&p: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/crown-sitting-days"
    cloud-platform.justice.gov.uk/team-name: "crown-sitting-days-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
